# parqcast

./: .gitignore  .pre-commit-config.yaml  AGENTS.MD  CLAUDE.md  GEMINI.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: DATA_DICTIONARY.md  edge-cases-review.md  odoo-18-vs-19-evidence.md  settings-improvements.md  v18-implementation-plan.md  versioning-plan.md
scripts/: gen_pot.sh  gen_readme.sh  oca_lint.sh  olegrunit.sh  test_odoo_cron.py  test_odoosh_limits.sh
stubs/odoo-stubs/: __init__.pyi  api.pyi  fields.pyi  models.pyi
stubs/odoo-stubs/tests/: __init__.pyi  common.pyi
tests/: test_capabilities.py  test_live_db.py  test_local_transport.py  test_manifest.py  test_schemas.py  test_version_gate.py
